add Range to device and /admin/devices
